--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -33,7 +33,7 @@ body
   margin-top 10px
   max-height 300px
   overflow-y auto
-#user-actions
+.user-actions
     ul
         list-style-type none
         li
