--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -43,7 +43,7 @@ body
             margin-right 2px
 #snippets-container
     .snippet
-        margin-bottom 5px
+        margin 5px
     .snippet-content
         padding 5px
         background-color #DCDCDC
