--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,7 @@
 body
   padding 20px
+.required
+  color red
 #footer
   border-radius 4px
   padding-top 5px
@@ -50,3 +52,9 @@ body
         border 1px solid Grey
     .snippet-actual
         margin-top 5px
+.css-form
+    input.ng-invalid.ng-dirty
+      background-color #FA787E
+.css-form
+    input.ng-valid.ng-dirty
+      background-color #78FA89
