Add Redactor plugin to add table borders. Also begin implementation of management of report/template images

--- a/views/report_templates/report_template.jade
+++ b/views/report_templates/report_template.jade
@@ -11,6 +11,7 @@ block head-js
     script(type='text/javascript', src='/lib/redactor/plugins/fontcolor/fontcolor.js')
     script(type='text/javascript', src='/lib/redactor/plugins/fontfamily/fontfamily.js')
     script(type='text/javascript', src='/lib/redactor/plugins/fullscreen/fullscreen.js')
+    script(type='text/javascript', src='/lib/redactor/plugins/tableborder/tableborder.js')
     script(type='text/javascript', src='/javascripts/angular_common/global_errors.js')
     script(type='text/javascript', src='/javascripts/angular_common/custom_directives.js')
     script(type='text/javascript', src='/javascripts/report_templates/report_template_app.js')
