--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 doctype HTML
 html
   head
+    meta(http-equiv='Content-Type', content='text/html;charset=utf-8')
     title= title
     link(rel='stylesheet', href='/lib//bootstrap-3.0.0/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
