--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
   border-radius: 4px;
   padding-top: 5px;
   margin-top: 10px;
-  height: 30px;
+  height: 50px;
   background-color: #f5f5f5;
 }
 #footer .credit {
@@ -74,4 +74,7 @@ body {
 }
 .css-form input.ng-valid.ng-dirty {
   background-color: #78fa89;
+}
+.narrow-container {
+  width: 400px;
 }
