--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -6,7 +6,7 @@ body
   border-radius 4px
   padding-top 5px
   margin-top 10px;
-  height 30px
+  height 50px
   background-color #f5f5f5
   .credit
     text-align center
@@ -58,3 +58,5 @@ body
 .css-form
     input.ng-valid.ng-dirty
       background-color #78FA89
+.narrow-container
+    width 400px
